# filemind

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  filemind.spec  install.sh  pyinstaller_entry.py  pyproject.toml  release.sh
.github/workflows/: build.yml  docs.yml  generate-release-data.yml
docs/: index.html  releases.json  script.js  style.css
src/filemind/: __init__.py  cli.py  config.py  database.py  embedder.py  extractor.py  hasher.py  repository.py  vector_store.py  version_check.py
