[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "filemind"
version = "0.1.0"
description = "Local-first file intelligence engine for deduplication and semantic search."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "typer[all]",
    "pdfplumber",
    "python-docx",
    "sentence-transformers",
    "onnxruntime",
    "faiss-cpu",
    "watchdog" 
]

[project.scripts]
filemind = "filemind.cli:app"
