[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "filemind"
version = "0.1.0"
description = "Local-first file intelligence engine for deduplication and semantic search."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Karthikeya Akhandam" }
]

keywords = [
    "semantic-search",
    "file-search",
    "deduplication",
    "offline",
    "privacy",
    "faiss",
    "cli"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "typer[all]",
    "pdfplumber",
    "python-docx",
    "onnxruntime",
    "faiss-cpu",
    "numpy",
    "tokenizers",
    "requests"
]

[project.optional-dependencies]
watch = [
    "watchdog"
]

dev = [
    "black",
    "ruff",
    "pytest",
    "pyinstaller"
]

[project.urls]
Homepage = "https://github.com/Karthikeya-Akhandam/filemind"
Repository = "https://github.com/Karthikeya-Akhandam/filemind"
Issues = "https://github.com/Karthikeya-Akhandam/filemind/issues"

[project.scripts]
filemind = "filemind.cli:app"
